--- a/index.phtml
+++ b/index.phtml
@@ -11,6 +11,7 @@
 <script>jQuery = Zepto</script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script src="//github.hubspot.com/sortable/js/sortable.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
 </head>
 <body>
 
@@ -41,11 +42,21 @@
 <?php endif; ?>
 </select>
 
+<?php if (@$params->source && @$params->host): ?>
+<input type="hidden" name="mode" value="<?php print($mode); ?>">
+<input type="submit" name="mode" value="Table" class="btn btn-default<?php if ('table' === $mode): ?> active<?php endif; ?>">
+<input type="submit" name="mode" value="Chart" class="btn btn-default<?php if ('chart' === $mode): ?> active<?php endif; ?>">
+</ul>
+<?php endif; ?>
+
 </form>
 </div>
 
 <?php if (@$data): ?>
 <div class="container">
+
+<?php if ('table' === $mode): ?>
+
 <table class="table sortable-theme-bootstrap" style="width:100%" data-sortable>
     <thead>
         <tr>
@@ -64,6 +75,28 @@
 <?php endforeach; ?>
     </tbody>
 </table>
+
+<?php else: ?>
+
+<canvas id="chart" width="300" height="120"></canvas>
+
+<script>
+var data = <?php print($data); ?>;
+</script>
+
+<script>
+var ctx = document.getElementById('chart');
+var chart = new Chart(ctx, {
+    type: 'line',
+    data: window.data,
+    options: {
+        animation : false
+    },
+});
+</script>
+
+<?php endif; ?>
+
 </div>
 <?php endif; ?>
 
