--- a/index.phtml
+++ b/index.phtml
@@ -58,8 +58,8 @@
 
 <span class="pull-left" style="line-height:4em;">
 <input type="hidden" name="mode" value="<?php print($mode); ?>">
-<input type="submit" name="mode" value="Table" class="btn btn-default<?php if ('table' === $mode): ?> active<?php endif; ?>" style="margin-right:1em;">
-<input type="submit" name="mode" value="Chart" class="btn btn-default<?php if ('chart' === $mode): ?> active<?php endif; ?>">
+<input type="submit" name="mode" value="Chart" class="btn btn-default<?php if ('chart' === $mode): ?> active<?php endif; ?>" style="margin-right:1em;">
+<input type="submit" name="mode" value="Table" class="btn btn-default<?php if ('table' === $mode): ?> active<?php endif; ?>">
 </span>
 <?php endif; ?>
 
