Use 24 hour clock in charts.

--- a/index.phtml
+++ b/index.phtml
@@ -89,8 +89,8 @@ var chart = new Chart(ctx, {
                 type: 'time',
                 time: {
                     displayFormats: {
-                        minute: 'hh:mm',
-                        hour: 'YYYY-MM-DD hh:mm',
+                        minute: 'HH:mm',
+                        hour: 'YYYY-MM-DD HH:mm',
                     },
                 },
             }],
