Add packet loss to charts.

--- a/index.phtml
+++ b/index.phtml
@@ -94,6 +94,13 @@ var chart = new Chart(ctx, {
                     },
                 },
             }],
+            yAxes: [{
+                position: 'left',
+                id: 'left',
+            }, {
+                position: 'right',
+                id: 'right',
+            }]
         },
     },
 });
