--- a/index.phtml
+++ b/index.phtml
@@ -97,10 +97,18 @@ var chart = new Chart(ctx, {
             yAxes: [{
                 position: 'left',
                 id: 'left',
+                ticks: {
+                    min: 0,
+                    suggestedMax: 4000,
+                },
             }, {
                 position: 'right',
                 id: 'right',
-            }]
+                ticks: {
+                    min: 0,
+                    suggestedMax: 10,
+                },
+            }],
         },
     },
 });
