--- a/index.phtml
+++ b/index.phtml
@@ -22,6 +22,8 @@
 </div>
 
 <div class="container">
+<div class="panel panel-default">
+<div class="panel-body clearfix">
 <form action="." onchange="this.submit()">
 
 <span class="pull-left" style="margin-right:1em;">
@@ -64,6 +66,13 @@
 <?php endif; ?>
 
 </form>
+</div>
+<?php if (@$data): ?>
+<div class="panel-footer">
+Date range: <?php print($startTime); ?> - <?php print($endTime); ?>
+</div>
+<?php endif; ?>
+</div>
 </div>
 
 <?php if (@$data): ?>
