Tweak data date display (include timezone).

--- a/index.phtml
+++ b/index.phtml
@@ -69,7 +69,7 @@
 </div>
 <?php if (@$data): ?>
 <div class="panel-footer">
-Date range: <?php print($startTime); ?> - <?php print($endTime); ?>
+Data: <?php print($startTime); ?> - <?php print($endTime); ?> (UTC<?php print(date('P')); ?>)
 </div>
 <?php endif; ?>
 </div>
